--- a/part0/0.5_spa_diagram.md
+++ b/part0/0.5_spa_diagram.md
@@ -4,9 +4,8 @@ sequenceDiagram
 
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
-    status code -> 304 Not Modified
     activate server
-    server-->>browser: JSON
+    server-->>browser: HTML Document Not Modified
     deactivate server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
@@ -14,10 +13,12 @@ sequenceDiagram
     server-->>browser: the css file
     deactivate server
 
-    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.js
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
     activate server
     server-->>browser: the JavaScript file
     deactivate server
+
+    Note right of browser: The browser starts executing the JavaScript code that fetches the JSON from the server
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
